2009-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13067: Missing CSS classes in page module
	* Fixed bug: #13040: HSC switch in Mapping editor doesn't save "0"
	* Follow-up to bugfix #9980: Configurable eTypes for creating fields

2009-12-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12802: Unlink element does not refresh pages 

2009-12-17  Steffen Kamper  <info@sk-typo3.de>

	* added blindIcons and debug to manual
	* Fixed bug: #13058: Icons can't be blinded in page module
	* Fixed bug: #13051: browse for records

2009-12-17 Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12949: A drag/drop cursor is shown on the TV Page object
	* Fixed bug: #13054: Drag&Drop code is hard to maintain, works only for 4.3

2009-12-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #9980: Configurable eTypes for creating fields
	* Fixed bug: #4200: Shortcut page must show content when kb_tv_cont_slide in used

2009-12-10  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #8762: Links to edit page content in BE lead to tt_content elements instead of page elements (Thanks to Simon Tuck)
	* Fixed bug: #11146: Page Wizard only looks for UserTSConfig, not for PageTSConfig

2009-12-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12942: Bugfix: Section-"Flag" is lost during Modify DS/TO
	* Fixed bug: #12973: Allow beLayout template file for TO and DS

2009-12-04  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12916: Field name is not visible in BE module with detail view (thanks to Francois Suter)

2009-12-01  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #0012877: Missing semicolon in dragndrop.js (thanks to Sebastian Gebhard)

2009-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12868: The new media element will not show up in NewCeWizard because of wrong object path (Thanks to Uschi Renziehausen)

2009-11-28  Tolleiv Nietsch <nietsch@aoemedia.de>
